Added insta links

--- a/marketplace_description.html
+++ b/marketplace_description.html
@@ -75,7 +75,7 @@
         <footer class="sm_icons">
             <!-- These icons are treated as normal text, so we can increase thier size using font-size in CSS-->
             <a href="https://www.facebook.com/thabelo.608763/"><i class='bx bxl-facebook'></i></box-icon></a>
-            <a href="#"><i class='bx bxl-instagram'></i></a>
+            <a href="https://www.instagram.com/3rd_rate_player/?hl=en"><i class='bx bxl-instagram'></i></a>
             <a href="https://www.linkedin.com/in/gopolang-makgothi-9b2ab81b7/"><i class='bx bxl-linkedin' ></i></a>
         </footer>
         
