--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <a href="https://a6c-wise-lavoisier.circumeo-apps.net/" class="logo"> <img id="mss_logo" src="MSS_logo.jpg"/></a>
 
         <nav class="navbar">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="portfolio.html">Portfolio</a>
         </nav>
 
